# dirdiff

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Readme.md  cliff.toml
.github/workflows/: rust_build.yml
benchmark_results/: mozilla.md  mozilla2.md
src/: file_type_enum.rs  main.rs
