[package]
name = "dirdiff"
version = "0.1.0"
edition = "2021"
authors = ["Arthur Carcano <arthur.carcano@ocamlpro.com>"]
description = """Efficiently compute the differences between two directories."""
readme = "README.md"
repository = "https://github.com/OCamlPro/dirdiff"
exclude = [".github"]
categories = ["command-line-utilities"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.18", features = ["derive"] }
crossbeam-deque = "0.8.2"
crossbeam-utils = "0.8.12"
